# autoprot

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
data/val/: val.parquet
src/autoprot/: __init__.py  run.py  train.py
tests/: conftest.py  test_prepare.py  test_train.py
